# opencode-python

./: .env.example  .gitignore  README.md  pyproject.toml
docs/plans/: 2026-03-11-opencode-python-architecture.md  2026-03-11-opencode-python-design.md  2026-03-11-opencode-python-prd.md  2026-03-11-opencode-python-task-breakdown.md  2026-03-11-opencode-python-technical-design.md  2026-03-11-opencode-python.md
opencode_py/: __init__.py  __main__.py
opencode_py/agents/: __init__.py  executor.py  planner.py  reviewer.py
opencode_py/cli/: __init__.py  main.py
opencode_py/config/: __init__.py  settings.py
opencode_py/core/: __init__.py  schemas.py
opencode_py/providers/: __init__.py  base.py  openai_provider.py
opencode_py/retrieval/: __init__.py  indexer.py  ranker.py  service.py
opencode_py/security/: __init__.py  policy.py
opencode_py/session/: __init__.py  models.py  repository.py
opencode_py/storage/: __init__.py  sqlite_store.py
opencode_py/tools/: __init__.py  base.py  fs_tool.py  runtime.py  search_tool.py  shell_tool.py
tests/: test_smoke_cli.py
tests/agents/: test_executor.py  test_planner.py  test_reviewer.py
tests/cli/: test_chat_command.py  test_session_commands.py
tests/config/: test_settings.py
tests/core/: test_orchestrator.py  test_schemas.py
tests/e2e/: test_run_command_e2e.py
tests/providers/: test_openai_provider.py
tests/retrieval/: test_service.py
tests/security/: test_policy.py
tests/session/: test_repository.py
tests/storage/: test_sqlite_store.py
tests/tools/: test_tools_runtime.py
(+3 files in other folders)
